--- a/src/main/webapp/views/visite/vRechercheVue.html
+++ b/src/main/webapp/views/visite/vRechercheVue.html
@@ -1,21 +1,42 @@
-<h2>Formulaire d'ajout d'une visite</h2>
+<h2>Formulaire de recherche d'une visite</h2>
+
 <br/>
-ID : <input type="number" placeholder="identifiant" ng-model="id" >
-<br/>
-<input type="button" value="Rechercher" ng-click="recherche()" >
-<br/>
+<form class="form-horizontal" >
+
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Ref visite</label>
+		<div class="col-sm-5">
+			<input type="number" class="form-control" placeholder="ref"
+				ng-model="id">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-5">
+			<button type="button" class="btn btn-default" value="Rechercher"
+				ng-click="recherche()">Rechercher</button>
+		</div>
+	</div>
+
+</form>
 <div ng-show="indice">
 <h1>Informations de la visite</h1>
 
 <table class="table table-striped">
 	<tr>
 		<th>Date et heure</th>
+		<th>Ref bien en location</th>
+		<th>Ref bien en vente</th>
+		<th>Nom client</th>
+		<th>Nom responsable</th>
 	</tr>
 	<tr>
 		<td>{{visite.dateHeure | date: "dd/MM/yyyy HH:mm"}}</td>
+		<td>{{visite.bienImmobilierALouer.id}}</td>
+		<td>{{visite.bienImmobilierAVendre.id}}</td>
+		<td>{{visite.client.nom}}</td>
+		<td>{{visite.responsable.nom}}</td>
 	</tr>
 </table>
 
 </div>
-
-<h3>{{msg}}</h3>
