--- a/src/main/webapp/views/visite/vSupprVue.html
+++ b/src/main/webapp/views/visite/vSupprVue.html
@@ -1,7 +1,20 @@
 <h2>Formulaire de suppression d'une visite</h2>
 <br/>
-ID <input type="number" placeholder="ID" ng-model="id">
-<br/>
-<input type="button" value="Supprimer" ng-click="suppr()" >
-<br/>
-<h3>{{msg}}</h3>
+<form class="form-horizontal" >
+
+	<div class="form-group">
+		<label class="col-sm-2 control-label">Ref visite</label>
+		<div class="col-sm-5">
+			<input type="number" class="form-control" placeholder="ref"
+				ng-model="id">
+		</div>
+	</div>
+
+	<div class="form-group">
+		<div class="col-sm-offset-2 col-sm-5">
+			<button type="button" class="btn btn-default" value="Supprimer"
+				ng-click="suppr()">Supprimer</button>
+		</div>
+	</div>
+
+</form>
