valentin commit debug bien a lourer

--- a/src/main/webapp/views/pc/bLRecherchePCVue.html
+++ b/src/main/webapp/views/pc/bLRecherchePCVue.html
@@ -99,14 +99,14 @@
 	
 	
 	
-	
-		
+	<!-- routing -->
+		<!--  
 	$routeProvider.when("/rechercheLouerPC", {
 		templateUrl : "views/pc/bLRecherchePCVue.html",
 		controller : "getAdresseBLCtrl"
 	})
 	
-	
+	-->
 	
 	
 	
