--- a/src/main/webapp/views/pc/bVRecherchePCVue.html
+++ b/src/main/webapp/views/pc/bVRecherchePCVue.html
@@ -1,10 +1,54 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
+<h2>Formulaire de recherche d'un bien immobilier en vente</h2>
+<br />
+<form class="form-horizontal">
+	<div class="form-group">
+		<label for="adresse" class="col-md-2 control-label">Adresse</label>
+		<div class="col-md-6">
+			<input type="text" class="form-control" adresse="adresse" ng-model="adresse">
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-md-offset-2 col-md-10">
+			<input type="button" class="btn btn-default" value="Rechercher" ng-click="rechercher()">
+		</div>
+	</div>
+</form>
+<br />
+<div ng-show="indice">
+	<h1>Informations du bien</h1>
+	<br />
+	<table class="table table-striped">
+		<tr>
+			<th>Type de Bien</th>
+			<th>Statut</th>
+			<th>Revenu cadastral</th>
+			<th>Description</th>
+			<th>Date de soumission</th>
+			<th>Date de disposition</th>
+			<th>Photo descriptive</th>
+			<th>Prix</th>
+			<th>Etat</th>
+			<th>Rue</th>
+			<th>Code Postal</th>
+			<th>Ville</th>
+			<th>Pays</th>
 
-</body>
-</html>
+		</tr>
+		<tr>
+			<td>{{bienvendre.typeBien}}</td>
+			<td>{{bienvendre.statut}}</td>
+			<td>{{bienvendre.revenuCadastre}}</td>
+			<td>{{bienvendre.description}}</td>
+			<td>{{bienvendre.dateSoumission | date: "dd/MM/yyyy"}}</td>
+			<td>{{bienvendre.dateDisposition | date: "dd/MM/yyyy"}}</td>
+			<td><img ng-repeat="p in bienvendre.listeImages"
+				ng-src="data:image/JPEG;base64,{{p.image}}"
+				style="max-height: 50px; max-width: 50px"></td>
+			<td>{{bienvendre.prix}}</td>
+			<td>{{bienvendre.etat}}</td>
+			<td>{{bienvendre.adresse.numRue}}, {{bienvendre.adresse.rue}}</td>
+			<td>{{bienvendre.adresse.cp}}</td>
+			<td>{{bienvendre.adresse.localite}}</td>
+			<td>{{bienvendre.adresse.pays}}</td>
+		</tr>
+	</table>
