steven : commit rajout d'une méthode rechContratParResponsable

--- a/src/main/webapp/views/contrat/coSupprVue.html
+++ b/src/main/webapp/views/contrat/coSupprVue.html
@@ -3,5 +3,5 @@
 <label>Numero du contrat</label>
 <input type="text" placeholder="Numero" ng-model="id">
 <br/>
-<input type="button" value="Ajouter" ng-click="suppr(id)">
+<input type="button" value="Supprimer" ng-click="suppr(id)">
 <h3>{{msg}}</h3>
