--- a/src/main/webapp/views/contrat/coModifVue.html
+++ b/src/main/webapp/views/contrat/coModifVue.html
@@ -1,15 +1,17 @@
 <h2 style="color : aquamarine; text-align: center">Formulaire de modifiaction d'un contrat</h2>
 <form class="form-horizontal">
+
 <div class="form-group">
     <label for="idId" class="col-sm-2 control-label">ID</label>
     <div class="col-sm-5">
-      <input type="number" class="form-control" id="idId" ng-model="contrat.id">
+      <input type="number" class="form-control" id="idId" ng-model="coModif.id">
     </div>
   </div>
+  
  <div class="form-group">
     <label for="idID" class="col-sm-2 control-label">Type de mandat</label>
     <div class="col-sm-5">
-      <select class="form-control" id="idType" ng-model="contrat.type">
+      <select class="form-control" id="idType" ng-model="coModif.type">
 		  <option value="">choisissez un type de contrat</option>
 		  <option value="exclusif">Exclusif</option>
 		  <option value="simple">Simple</option>
@@ -17,23 +19,18 @@
 		</select>
     </div>
   </div>
+  
   <div class="form-group">
     <label for="idDate" class="col-sm-2 control-label">Date</label>
     <div class="col-sm-5">
-      <input type="date" id="idDate" placeholder="Entrez une date" ng-model="contrat.dateAcquisition">
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="idClient" class="col-sm-2 control-label">Client acquereur</label>
-    <div class="col-sm-5">
-      <input type="number" class="form-control" id="idClient" ng-model="contrat.client.id">
+      <input type="date" id="idDate" placeholder="Entrez une date" ng-model="coModif.dateAcquisition">
     </div>
   </div>
   
   <div class="form-group">
     <label for="idVisite" class="col-sm-2 control-label">Visite</label>
     <div class="col-sm-5">
-      <input type="number" class="form-control" id="idVisite" ng-model="contrat.visite.id">
+      <input type="number" class="form-control" id="idVisite" ng-model="coModif.visite.id">
     </div>
   </div>
   
