valentin commit recherche par adresse louer

--- a/src/main/webapp/views/pc/bLRecherchePCVue.html
+++ b/src/main/webapp/views/pc/bLRecherchePCVue.html
@@ -3,9 +3,9 @@
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="region" class="col-md-2 control-label">Adresse</label>
+		<label for="adresse" class="col-md-2 control-label">Adresse</label>
 		<div class="col-md-6">
-			<input type="number" class="form-control" id="region" ng-model="region">
+			<input type="text" class="form-control" id="adrese" ng-model="adresse">
 		</div>
 	</div>
 	<br />
@@ -39,76 +39,29 @@
 			<th>Ville</th>
 			<th>Pays</th>
 		</tr>
-		<tr>
-			<td>{{bienlouer.typeBien}}</td>
-			<td>{{bienlouer.statut}}</td>
-			<td>{{bienlouer.revenuCadastre}}</td>
-			<td>{{bienlouer.description}}</td>
-			<td>{{bienlouer.dateSoumission | date: "dd/MM/yyyy"}}</td>
-			<td>{{bienlouer.dateDisposition | date: "dd/MM/yyyy"}}</td>
+		<tr ng-repeat="bl in bienlouer">
+			<td>{{bl.typeBien}}</td>
+			<td>{{bl.statut}}</td>
+			<td>{{bl.revenuCadastre}}</td>
+			<td>{{bl.description}}</td>
+			<td>{{bl.dateSoumission | date: "dd/MM/yyyy"}}</td>
+			<td>{{bl.dateDisposition | date: "dd/MM/yyyy"}}</td>
 			<td><img ng-repeat="p in bienlouer.listeImages"
 				ng-src="data:image/JPEG;base64,{{p.image}}"
 				style="max-height: 50px; max-width: 50px"></td>
-			<td>{{bienlouer.caution}}</td>
-			<td>{{bienlouer.loyer}}</td>
-			<td>{{bienlouer.charges}}</td>
-			<td>{{bienlouer.typeBail}}</td>
-			<td>{{bienlouer.garniture}}</td>
-			<td>{{bienlouer.adresse.numRue}}, {{bienlouer.adresse.rue}}</td>
-			<td>{{bienlouer.adresse.cp}}</td>
-			<td>{{bienlouer.adresse.localite}}</td>
-			<td>{{bienlouer.adresse.pays}}</td>
+			<td>{{bl.caution}}</td>
+			<td>{{bl.loyer}}</td>
+			<td>{{bl.charges}}</td>
+			<td>{{bl.typeBail}}</td>
+			<td>{{bl.garniture}}</td>
+			<td>{{bl.adresse.numRue}}, {{bl.adresse.rue}}</td>
+			<td>{{bl.adresse.cp}}</td>
+			<td>{{bl.adresse.localite}}</td>
+			<td>{{bl.adresse.pays}}</td>
 		</tr>
 
 	</table>
-	
-	
-<div style="width: 500px; height: 500px" class="center-block">
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-		<!-- Indicators -->
-		<ol class="carousel-indicators">
-			<li data-target="#myCarousel" ng-repeat="p in bienlouer.listeImages"
-				ng-class="{active: ($index === 0)}" data-slide-to="{{$index}}"></li>
-		</ol>
-		<div class="carousel-inner">
-			<div ng-class="{item: true, active: ($index === 0)}"
-				ng-repeat="p in bienlouer.listeImages">
 
-				<img class="d-block w-100"
-					ng-src="data:image/JPEG;base64,{{p.image}}"
-					alt="Slide number {{$index}}">
-			</div>
-		</div>
-
-		<span class="left carousel-control" data-target="#myCarousel"
-			data-slide="prev"> <span
-			class="glyphicon glyphicon-chevron-left"></span>
-		</span> <span class="right carousel-control" data-target="#myCarousel"
-			data-slide="next"> <span
-			class="glyphicon glyphicon-chevron-right"></span>
-		</span>
-	</div>
-</div>
-</div>
-
-	<a target="_blank"
-		href="https://www.geoportail.gouv.fr/carte?c={{bienlouer.lng}},{{bienlouer.lat}}&z=20&l0=ORTHOIMAGERY.ORTHOPHOTOS::GEOPORTAIL:OGC:WMTS(1)&l1=CADASTRALPARCELS.PARCELS::GEOPORTAIL:OGC:WMTS(1)&permalink=yes"><p>cadastre</p></a>
-
-	<br />
-	<h3>{{msg}}</h3>
-	
-	
-	
-	<!-- routing -->
-		<!--  
-	$routeProvider.when("/rechercheLouerPC", {
-		templateUrl : "views/pc/bLRecherchePCVue.html",
-		controller : "getAdresseBLCtrl"
-	})
-	
-	-->
-	
-	
 	
 	
 	
