--- a/src/main/webapp/views/proprietaire/pListeVue.html
+++ b/src/main/webapp/views/proprietaire/pListeVue.html
@@ -1,5 +1,11 @@
 <h1>Liste des Propri&eacutetaires</h1>
 <table class="table table-striped">
+
+Rechercher les biens par propri&eacutetaires : <input type="text" ng-model="recherche">
+
+<br>
+<br>
+
 	<tr>
 		<th>Nom</th>
 		<th>Email</th>
@@ -10,7 +16,7 @@
 		<th>T&eacutel&eacutephone Personnel</th>
 		<th>T&eacutel&eacutephone Professionnel</th>
 	</tr>
-	<tr ng-repeat="p in liste">
+	<tr ng-repeat="p in liste | filter:{nom : recherche}">
 		<td>{{p.nom}}</td>
 		<td>{{p.mail}}</td>
 		<td>{{p.adresse.numRue}}, {{p.adresse.rue}}</td>
