Noelia : ajout de la fonctionnalite pour modif la dispo des biens

--- a/src/main/webapp/views/bv/bVAjoutVue.html
+++ b/src/main/webapp/views/bv/bVAjoutVue.html
@@ -46,8 +46,8 @@
 					</label>
 				</div>
 				<div class="radio">
-					<label> <input type="radio" name="statut" value="loue"
-						ng-model="bvForm.statut"> Lou&eacute
+					<label> <input type="radio" name="statut" value="achete"
+						ng-model="bvForm.statut"> Achet&eacute
 					</label>
 				</div>
 			</div>
