--- a/src/main/webapp/views/bv/bVModifVue.html
+++ b/src/main/webapp/views/bv/bVModifVue.html
@@ -53,8 +53,8 @@
 					</label>
 				</div>
 				<div class="radio">
-					<label> <input type="radio" name="statut" value="loue"
-						ng-model="bvForm.statut"> Lou&eacute
+					<label> <input type="radio" name="statut" value="achete"
+						ng-model="bvForm.statut"> Achet&eacute
 					</label>
 				</div>
 			</div>
