--- a/src/main/webapp/views/pc/mapPCVue.html
+++ b/src/main/webapp/views/pc/mapPCVue.html
@@ -1,1 +1,1 @@
-<div id="map" ng-model="map" class="map"></div> 
+<div id="map" ng-model="map" class="map"><div id="popup" ng-model="popup"></div></div> 
