thibault : commit changement dans la vue !

--- a/src/main/webapp/views/pc/mapPCVue.html
+++ b/src/main/webapp/views/pc/mapPCVue.html
@@ -1,1 +1,17 @@
-<div id="map" ng-model="map" class="map"><div id="popup" ng-model="popup"></div></div> 
+<div class="col-md-10" id="map" ng-model="map" class="map"><div id="popup" ng-model="popup"></div></div> 
+<div>
+	<table class="col-md-2" style="background-color: white; margin-top: 150px">
+		<tr>
+			<th><b>LEGENDE</b></th>
+			<th></th>
+		</tr>
+		<tr>
+			<td><img src="assets/resources/image/marker_green.png"> : </td>
+			<td>biens immobiliers &aacute vendre</td>
+		</tr>
+		<tr>
+			<td><img src="assets/resources/image/marker_red.png"> : </td>
+			<td>biens immobiliers &aacute louer</td>
+		</tr>
+	</table>
+</div>
