--- a/src/main/webapp/views/pc/bVRecherchePCVue.html
+++ b/src/main/webapp/views/pc/bVRecherchePCVue.html
@@ -18,7 +18,7 @@
 	<h1>Informations du bien</h1>
 	<br />
 	<table class="table table-striped">
-		<tr>
+		<tr style="border-radius: 15px 15px 0px 0px; border: none; background-color: grey">
 			<th>Type de Bien</th>
 			<th>Statut</th>
 			<th>Revenu cadastral</th>
@@ -34,7 +34,7 @@
 			<th>Pays</th>
 
 		</tr>
-		<tr ng-repeat="bv in bienvendre")>
+		<tr ng-repeat="bv in bienvendre" style="background-color: white">
 			<td>{{bv.typeBien}}</td>
 			<td>{{bv.statut}}</td>
 			<td>{{bv.revenuCadastre}}</td>
