--- a/src/main/webapp/views/pc/mapPCVue.html
+++ b/src/main/webapp/views/pc/mapPCVue.html
@@ -6,12 +6,12 @@
 			<th></th>
 		</tr>
 		<tr>
-			<td><img src="assets/resources/image/marker_green.png"> : </td>
-			<td>biens immobiliers &aacute vendre</td>
+			<td style="border: none"><img src="assets/resources/image/marker_green.png"> : </td>
+			<td style="border: none">biens immobiliers &aacute vendre</td>
 		</tr>
 		<tr>
-			<td><img src="assets/resources/image/marker_red.png"> : </td>
-			<td>biens immobiliers &aacute louer</td>
+			<td style="border: none"><img src="assets/resources/image/marker_red.png"> : </td>
+			<td style="border: none">biens immobiliers &aacute louer</td>
 		</tr>
 	</table>
 </div>
