--- a/src/main/webapp/views/pc/bLListePCVue.html
+++ b/src/main/webapp/views/pc/bLListePCVue.html
@@ -1,5 +1,5 @@
 <h1>Liste des Biens immobilier en location</h1>
-<table class="table table-striped">
+<table class="table">
 
 Rechercher par type de bien : <input type="text" ng-model="recherche">
 rechercher par garniture : <input type="text" ng-model="findGarniture">
