--- a/src/main/webapp/views/pc/bVListePCVue.html
+++ b/src/main/webapp/views/pc/bVListePCVue.html
@@ -1,5 +1,5 @@
 <h1>Liste des Biens immobilier en vente</h1>
-<table class="table table-striped">
+<table class="table">
 
 Rechercher type de bien : <input type="text" ng-model="findtype">
 Rechercher en fonction de l'etat : <input type="text" ng-model="findetat">
@@ -7,7 +7,7 @@ Rechercher en fonction de l'etat : <input type="text" ng-model="findetat">
 <br>
 <br>
 
-	<tr>
+	<tr style="border-radius: 15px 15px 0px 0px; border: none; background-color: grey">
 		<th>Type de Bien</th>
 		<th>Statut</th>
 		<th>Revenu cadastral</th>
@@ -22,7 +22,7 @@ Rechercher en fonction de l'etat : <input type="text" ng-model="findetat">
 		<th>Ville</th>
 		<th>Pays</th>
 	</tr>
-	<tr ng-repeat="b in liste | filter: {typeBien : findtype, etat: findetat}">
+	<tr ng-repeat="b in liste | filter: {typeBien : findtype, etat: findetat}" style="background-color: white">
 		<td>{{b.typeBien}}</td>
 		<td>{{b.statut}}</td>
 		<td>{{b.revenuCadastre}}</td>
