--- a/src/main/webapp/views/pc/accueilVue.html
+++ b/src/main/webapp/views/pc/accueilVue.html
@@ -1,17 +1,17 @@
 
-<h1>Liste des Biens immobilier</h1>
+<h1>Liste des Biens immobilier &agrave louer</h1>
 
 <div class="container">
 
 	<div class="row">
 
-		<div class="col-lg-3 col-sm-7 portfolio-item" ng-repeat="b in liste"
+		<div class="col-lg-3 col-sm-7 portfolio-item" ng-repeat="b in liste1"
 			style="border: solid; border-width: 1px; margin-left: 10px; padding-top: 10px; border-radius: 25px; background: linear-gradient(to bottom, rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.8)) no-repeat">
 
 			<div class="card h-100">
 
 
-				<img ng-click="displayInfos(b)" class="card-img-top"
+				<img ng-click="displayInfosbl(b)" class="card-img-top"
 					ng-src="data:image/JPEG;base64,{{b.listeImages[0].image}}"
 					style="min-height: 180px; max-height: 180px; min-width: 260px; min-width: 260px; pading_left: 20px; border-radius: 25px" />
 
@@ -30,6 +30,8 @@
 	</div>
 </div>
 
+<h1>Liste des Biens immobilier &agrave vendre</h1>
+
 <div class="container">
 
 	<div class="row">
@@ -40,7 +42,7 @@
 			<div class="card h-100">
 
 
-				<img ng-click="displayInfos(b)" class="card-img-top"
+				<img ng-click="displayInfosbv(b)" class="card-img-top"
 					ng-src="data:image/JPEG;base64,{{b.listeImages[0].image}}"
 					style="min-height: 180px; max-height: 180px; min-width: 260px; min-width: 260px; pading_left: 20px; border-radius: 25px" />
 
