--- a/src/main/webapp/views/pc/bLDetailPCVue.html
+++ b/src/main/webapp/views/pc/bLDetailPCVue.html
@@ -33,9 +33,9 @@
 	<label class="col-md-4"><b>Statut: </b></label><p class="col-md-7">{{bienlouer.statut}}</p>
 	<label class="col-md-4"><b>Date de soumission: </b></label><p class="col-md-7">{{bienlouer.dateSoumission | date: "dd/MM/yyyy"}}</p>
 	<label class="col-md-4"><b>Date de disposition: </b></label><p class="col-md-7">{{bienlouer.dateDisposition | date: "dd/MM/yyyy"}}</p>
-	<label class="col-md-4"><b>Caution locative: </b></label><p class="col-md-7">{{bienlouer.caution | currency : "€" : 2}}</p>
-	<label class="col-md-4"><b>Loyer Mensuel: </b></label><p class="col-md-7">{{bienlouer.loyer | currency : "€" : 2}}</p>
-	<label class="col-md-4"><b>Charges mensuelles: </b></label><p class="col-md-7">{{bienlouer.charges | currency : "€" : 2}}</p>
+	<label class="col-md-4"><b>Caution locative: </b></label><p class="col-md-7">{{bienlouer.caution | currency : "&#128 " : 2}}</p>
+	<label class="col-md-4"><b>Loyer Mensuel: </b></label><p class="col-md-7">{{bienlouer.loyer | currency : "&#128 " : 2}}</p>
+	<label class="col-md-4"><b>Charges mensuelles: </b></label><p class="col-md-7">{{bienlouer.charges | currency : "&#128 " : 2}}</p>
 	<label class="col-md-4"><b>Type de bail: </b></label><p class="col-md-7">{{bienlouer.typeBail}}</p>
 	<label class="col-md-4"><b>Garniture: </b></label><p class="col-md-7">{{bienlouer.garniture}}</p>
 	<label class="col-md-4"><b>Adresse: </b></label><p class="col-md-7">{{bienlouer.adresse.numRue}}, {{bienlouer.adresse.rue}}</p>
