--- a/src/main/webapp/views/agence/aRechercheVue.html
+++ b/src/main/webapp/views/agence/aRechercheVue.html
@@ -2,7 +2,7 @@
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-sm-2 control-label">ID</label>
+		<label for="id" class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-10">
 			<input type="number" class="form-control" id="id" placeholder="ID"
 				ng-model="id">
@@ -17,7 +17,7 @@
 </form>
 
 <div ng-show="indice">
-	<h2 style="color: aquamarine; text-align: center">Resultat</h2>
+	<h2>Informations sur l'agence</h2>
 	<table class="table table-striped">
 		<tr>
 			<th>Nom</th>
