--- a/src/main/webapp/views/contrat/coAjoutVue.html
+++ b/src/main/webapp/views/contrat/coAjoutVue.html
@@ -1,4 +1,4 @@
-<h2 style="color : aquamarine; text-align: center">Formulaire d'ajout de contrat</h2>
+<h2>Formulaire d'ajout de contrat</h2>
 <form class="form-horizontal">
  <div class="form-group">
     <label for="idID" class="col-sm-2 control-label">Type de mandat</label>
