--- a/src/main/webapp/views/contrat/coModifVue.html
+++ b/src/main/webapp/views/contrat/coModifVue.html
@@ -1,8 +1,8 @@
-<h2 style="color : aquamarine; text-align: center">Formulaire de modifiaction d'un contrat</h2>
+<h2>Formulaire de modification d'un contrat</h2>
 <form class="form-horizontal">
 
 <div class="form-group">
-    <label for="idId" class="col-sm-2 control-label">ID</label>
+    <label for="idId" class="col-sm-2 control-label">Num&eacute de contrat</label>
     <div class="col-sm-5">
       <input type="number" class="form-control" id="idId" ng-model="coModif.id">
     </div>
