--- a/src/main/webapp/views/contrat/coRechercheVue.html
+++ b/src/main/webapp/views/contrat/coRechercheVue.html
@@ -1,6 +1,6 @@
-<h2 style="color : aquamarine; text-align: center">Formulaire de recherche de contrat</h2>
+<h2>Formulaire de recherche de contrat</h2>
 <br/>
-<label>Numero du contrat</label>
+<label>Num&eacutero du contrat</label>
 <input type="text" placeholder="Numero" ng-model="id">
 <br/>
 <input type="button" value="Rechercher" ng-click="rech(id)">
