--- a/src/main/webapp/views/cs/cSListeVue.html
+++ b/src/main/webapp/views/cs/cSListeVue.html
@@ -1,11 +1,11 @@
-<h1>Liste des classes standard</h1>
+<h2>Liste des classes standard</h2>
 <table class="table table-striped">
 	<tr>
-		<th>nom</th>
-		<th>type de Bien</th>
-		<th>mode d'offre</th>
-		<th>prix Max</th>
-		<th>superficie Min</th>
+		<th>Nom</th>
+		<th>Type de Bien</th>
+		<th>Mode d'offre</th>
+		<th>Prix Maximal</th>
+		<th>Superficie Minimale</th>
 	</tr>
 	<tr ng-repeat="cs in listeClasseStandard">
 		<td>{{cs.nom}}</td>
