--- a/src/main/webapp/views/cs/cSRechercheVue.html
+++ b/src/main/webapp/views/cs/cSRechercheVue.html
@@ -2,7 +2,7 @@
 <br/>
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-sm-2 control-label">ID</label>
+		<label for="id" class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-10">
 			<input type="number" class="form-control" id="id" placeholder="ID"
 				ng-model="id" />
@@ -16,14 +16,14 @@
 </form>
 
 <div ng-show="indice">
-<h1>Informations de la classe standard</h1>
+<h2>Informations sur la classe standard</h2>
 <table class="table table-striped">
 	<tr>
-		<th>nom</th>
-		<th>type de Bien</th>
-		<th>mode d'offre</th>
-		<th>prix Max</th>
-		<th>superficie Min</th>
+		<th>Nom</th>
+		<th>Type de Bien</th>
+		<th>Mode d'offre</th>
+		<th>Prix Maximal</th>
+		<th>Superficie Minimale</th>
 	</tr>
 	<tr>
 		<td>{{cs.nom}}</td>
