--- a/src/main/webapp/views/responsable/rAjoutVue.html
+++ b/src/main/webapp/views/responsable/rAjoutVue.html
@@ -1,4 +1,4 @@
-<h2 style="color:red; text-align: center;">Ajout d'un responsable</h2>
+<h2>Formulaire d'ajout d'un responsable</h2>
 
 <form class="form-horizontal">
   <div class="form-group">
