--- a/src/main/webapp/views/responsable/rRechercheVue.html
+++ b/src/main/webapp/views/responsable/rRechercheVue.html
@@ -1,8 +1,8 @@
-<h2 style="color:red; text-align: center;">Recherche d'un responsable</h2>
+<h2>Recherche d'un responsable</h2>
 
 <form class="form-horizontal">
   <div class="form-group">
-    <label for="idID" class="col-sm-2 control-label">ID</label>
+    <label for="idID" class="col-sm-2 control-label">Identifiant</label>
     <div class="col-sm-10">
       <input type="number" class="form-control" id="idID" placeholder="identifiant" ng-model="id">
     </div>
