--- a/src/main/webapp/views/visite/vListeVue.html
+++ b/src/main/webapp/views/visite/vListeVue.html
@@ -1,10 +1,11 @@
-<h2 style="color : aquamarine; text-align: center">Liste des visites</h2>
+<h2>Liste des visites</h2>
 <table class="table table-striped">
 
 Rechercher les visites d'un client <input type="text" ng-model="recherche">
 <br>
 <br>
 	<tr>
+		<th>R&eacutef&eacuterence</th>
 		<th>Date et heure</th>
 		<th>Ref bien en location</th>
 		<th>Ref bien en vente</th>
@@ -12,6 +13,7 @@ Rechercher les visites d'un client <input type="text" ng-model="recherche">
 		<th>Nom responsable</th>
 	</tr>
 	<tr ng-repeat="v in listeVisite | filter: {client:{nom:recherche}}">
+		<td>{{v.id}}</td>
 		<td>{{v.dateHeure | date: "dd/MM/yyyy HH:mm"}}</td>
 		<td>{{v.bienImmobilierALouer.id}}</td>
 		<td>{{v.bienImmobilierAVendre.id}}</td>
