--- a/src/main/webapp/views/visite/vRechercheVue.html
+++ b/src/main/webapp/views/visite/vRechercheVue.html
@@ -4,7 +4,7 @@
 <form class="form-horizontal" >
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Ref visite</label>
+		<label class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-5">
 			<input type="number" class="form-control" placeholder="ref"
 				ng-model="id">
@@ -20,7 +20,7 @@
 
 </form>
 <div ng-show="indice">
-<h1>Informations de la visite</h1>
+<h2>Informations sur la visite</h2>
 
 <table class="table table-striped">
 	<tr>
