--- a/src/main/webapp/views/agence/aModifVue.html
+++ b/src/main/webapp/views/agence/aModifVue.html
@@ -2,7 +2,7 @@
 <br/>
 <form class="form-horizontal">
 <div class="form-group">
-		<label for="id" class="col-sm-2 control-label">ID</label>
+		<label for="id" class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-10">
 			<input type="number" class="form-control" id="id"
 				placeholder="ID" ng-model="aModif.id">
