--- a/src/main/webapp/views/bl/bLDispoVue.html
+++ b/src/main/webapp/views/bl/bLDispoVue.html
@@ -1,9 +1,8 @@
-<h2>Formulaire de modification d'un Bien immobilier en location</h2>
+<h2>Changement de disponibilit&eacute d'un Bien immobilier en location</h2>
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-md-4 control-label">R&eacutef&eacuterence
-			du Bien</label>
+		<label for="id" class="col-md-4 control-label">R&eacutef&eacuterence</label>
 		<div class="col-md-4">
 			<input type="number" class="form-control" id="id"
 				ng-model="blForm.id">
