--- a/src/main/webapp/views/bl/bLSupprVue.html
+++ b/src/main/webapp/views/bl/bLSupprVue.html
@@ -3,7 +3,7 @@
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-md-2 control-label">ID</label>
+		<label for="id" class="col-md-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-md-6">
 			<input type="number" class="form-control" id="id" ng-model="id">
 		</div>
