--- a/src/main/webapp/views/bv/bVDispoVue.html
+++ b/src/main/webapp/views/bv/bVDispoVue.html
@@ -2,8 +2,7 @@
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-md-4 control-label">R&eacutef&eacuterence
-			du Bien</label>
+		<label for="id" class="col-md-4 control-label">R&eacutef&eacuterence</label>
 		<div class="col-md-4">
 			<input type="number" class="form-control" id="id"
 				ng-model="bvForm.id">
