--- a/src/main/webapp/views/bv/bVModifVue.html
+++ b/src/main/webapp/views/bv/bVModifVue.html
@@ -14,7 +14,7 @@
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-md-2 control-label">ID</label>
+		<label for="id" class="col-md-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-md-6">
 			<input type="number" class="form-control" id="id"
 				ng-model="bvForm.id">
