--- a/src/main/webapp/views/bv/bVRechercheVue.html
+++ b/src/main/webapp/views/bv/bVRechercheVue.html
@@ -2,7 +2,7 @@
 <br />
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-md-2 control-label">ID</label>
+		<label for="id" class="col-md-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-md-6">
 			<input type="number" class="form-control" id="id" ng-model="id">
 		</div>
@@ -15,7 +15,7 @@
 </form>
 <br />
 <div ng-show="indice">
-	<h1>Informations du bien</h1>
+	<h2>Informations du bien</h2>
 	<br />
 	<table class="table table-striped">
 		<tr>
