--- a/src/main/webapp/views/client/clListeVue.html
+++ b/src/main/webapp/views/client/clListeVue.html
@@ -2,6 +2,7 @@
 <table class="table table-striped">
 	<thead>
 		<tr>
+			<th>R&eacutef&eacuterence</th>
 			<th>Nom</th>
 			<th>Telephone</th>
 			<th>Mail</th>
@@ -16,6 +17,7 @@
 	</thead>
 	<tbody>
 		<tr ng-repeat="cl in liste">
+			<td>{{cl.id}}</td>
 			<td>{{cl.nom}}</td>
 			<td>{{cl.telPerso}}</td>
 			<td>{{cl.mail}}</td>
