--- a/src/main/webapp/views/client/clModifVue.html
+++ b/src/main/webapp/views/client/clModifVue.html
@@ -1,7 +1,7 @@
-<h2>Formulaire d'ajout d'un client</h2>
+<h2>Formulaire de modification d'un client</h2>
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-sm-2 control-label">ID</label>
+		<label for="id" class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-10">
 			<input type="number" class="form-control" id="id" placeholder="ID"
 				ng-model="clForm.id">
