--- a/src/main/webapp/views/contrat/coListeVue.html
+++ b/src/main/webapp/views/contrat/coListeVue.html
@@ -1,4 +1,4 @@
-<h2 style="color : aquamarine; text-align: center">Liste des contrats</h2>
+<h2>Liste des contrats</h2>
 <table class="table table-striped">
 	<tr>
 		<th>Type</th>
