--- a/src/main/webapp/views/contrat/coRechercheParRespVue.html
+++ b/src/main/webapp/views/contrat/coRechercheParRespVue.html
@@ -1,6 +1,6 @@
-<h2 style="color : aquamarine; text-align: center">Formulaire de recherche de contrat par responsable</h2>
+<h2>Recherche des contrat par responsable</h2>
 <br/>
-<label>Numero du responsable</label>
+<label>Num&eacutero du responsable</label>
 <input type="text" placeholder="Numero" ng-model="id">
 <br/>
 <input type="button" value="Rechercher" ng-click="rech(id)">
