--- a/src/main/webapp/views/contrat/coSupprVue.html
+++ b/src/main/webapp/views/contrat/coSupprVue.html
@@ -1,6 +1,6 @@
-<h2 style="color : aquamarine; text-align: center">Formulaire de modification de contrat</h2>
+<h2>Formulaire de suppression de contrat</h2>
 <br/>
-<label>Numero du contrat</label>
+<label>Num&eacutero du contrat</label>
 <input type="text" placeholder="Numero" ng-model="id">
 <br/>
 <input type="button" value="Supprimer" ng-click="suppr(id)">
