--- a/src/main/webapp/views/proprietaire/pRechercheVue.html
+++ b/src/main/webapp/views/proprietaire/pRechercheVue.html
@@ -2,7 +2,7 @@
 <br/>
 <form class="form-horizontal">
 	<div class="form-group">
-		<label for="id" class="col-sm-2 control-label">ID</label>
+		<label for="id" class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-10">
 			<input type="number" class="form-control" id="id" placeholder="ID"
 				ng-model="id">
@@ -16,7 +16,7 @@
 </form>
 
 <div ng-show="indice">
-<h1>Informations du Propri&eacutetaire</h1>
+<h2>Informations du Propri&eacutetaire</h2>
 
 <table class="table table-striped">
 	<tr>
