--- a/src/main/webapp/views/responsable/rListeVue.html
+++ b/src/main/webapp/views/responsable/rListeVue.html
@@ -1,7 +1,8 @@
-<h2 style="color:red; text-align: center;">Liste des responsables</h2>
+<h2>Liste des responsables</h2>
 <table class="table table-striped">
   <thead>
     <tr>
+    	<th>Identifiant</th>
       <th >Nom</th>
       <th >Telephone</th>
       <th >Mail</th>
@@ -13,6 +14,7 @@
   </thead>
   <tbody>
     <tr ng-repeat="r in liste">
+    <td>{{r.id}}</td>
       <td>{{r.nom}}</td>
       <td>{{r.telPerso}}</td>
       <td>{{r.mail}}</td>
