--- a/src/main/webapp/views/responsable/rModifVue.html
+++ b/src/main/webapp/views/responsable/rModifVue.html
@@ -1,8 +1,8 @@
-<h2 style="color:red; text-align: center;">Modif d'un etudiant</h2>
+<h2>Formulaire de modification d'un responsable</h2>
 
 <form class="form-horizontal">
  <div class="form-group">
-    <label for="idID" class="col-sm-2 control-label">ID</label>
+    <label for="idID" class="col-sm-2 control-label">Identifiant</label>
     <div class="col-sm-5">
       <input type="number" class="form-control" id="idID" placeholder="id" ng-model="rForm.id">
     </div>
