--- a/src/main/webapp/views/visite/vModifVue.html
+++ b/src/main/webapp/views/visite/vModifVue.html
@@ -10,12 +10,12 @@
 	}
 </script>
 
-<h2>Formulaire d'ajout d'une visite</h2>
+<h2>Formulaire de modification d'une visite</h2>
 
 <form class="form-horizontal" name="bType">
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Ref</label>
+		<label class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-5">
 			<input type="number" class="form-control" placeholder="Ref"
 				ng-model="vModif.id">
