--- a/src/main/webapp/views/visite/vSupprVue.html
+++ b/src/main/webapp/views/visite/vSupprVue.html
@@ -3,7 +3,7 @@
 <form class="form-horizontal" >
 
 	<div class="form-group">
-		<label class="col-sm-2 control-label">Ref visite</label>
+		<label class="col-sm-2 control-label">R&eacutef&eacuterence</label>
 		<div class="col-sm-5">
 			<input type="number" class="form-control" placeholder="ref"
 				ng-model="id">
