--- a/src/main/webapp/views/pc/accueilVue.html
+++ b/src/main/webapp/views/pc/accueilVue.html
@@ -1,5 +1,5 @@
 
-<h1>Liste des Biens immobilier &agrave louer</h1>
+<h1 style="text-align: center">Liste des Biens immobilier &agrave louer</h1>
 
 <div class="container">
 
@@ -29,8 +29,8 @@
 		</div>
 	</div>
 </div>
-
-<h1>Liste des Biens immobilier &agrave vendre</h1>
+<hr/>
+<h1 style="text-align: center">Liste des Biens immobilier &agrave vendre</h1>
 
 <div class="container">
 
