--- a/src/main/webapp/views/client/clListeVue.html
+++ b/src/main/webapp/views/client/clListeVue.html
@@ -1,4 +1,4 @@
-<h2 style="color: red; text-align: center;">Liste des clients</h2>
+<h2>Liste des clients</h2>
 <table class="table table-striped">
 	<thead>
 		<tr>
