--- a/src/main/webapp/views/pc/aListePCVue.html
+++ b/src/main/webapp/views/pc/aListePCVue.html
@@ -1,4 +1,4 @@
-<h2 style="color : aquamarine; text-align: center">Liste des agences</h2>
+<h2>Liste des agences</h2>
 <table class="table">
 
 Rechercher par nom : <input type="text" ng-model="recherche">
