--- a/src/main/webapp/views/pc/accueilVue.html
+++ b/src/main/webapp/views/pc/accueilVue.html
@@ -1,5 +1,5 @@
 
-<h1 style="text-align: center">Liste des Biens immobilier &agrave louer</h1>
+<h2>Liste des Biens immobilier &agrave louer</h2>
 
 <div class="container">
 
@@ -30,7 +30,7 @@
 	</div>
 </div>
 <hr/>
-<h1 style="text-align: center">Liste des Biens immobilier &agrave vendre</h1>
+<h2>Liste des Biens immobilier &agrave vendre</h2>
 
 <div class="container">
 
